--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -10,5 +10,5 @@ kramdown:
 remote_theme: pages-themes/hacker@v0.2.0
 plugins:
 - jekyll-remote-theme
-title: Hello
-description: World
+title: 3D Interactive Map of Hanover College Campus
+description: A map that will lead to increased web traffic for the college, distribute essential information to students, and create a connected student body.
