--- a/app/package.json
+++ b/app/package.json
@@ -4,9 +4,13 @@
   "scripts": {
     "start": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
+    "clean": "rm -rf dist"
   },
   "devDependencies": {
+    "gh-pages": "^6.2.0",
     "vite": "^5.4.3"
   },
   "dependencies": {
