--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,3 +30,19 @@ jobs:
 
       - name: Build
         run: npm run build
+
+      - name: Upload Static Files
+        id: deployment
+        uses: actions/upload-pages-artifact@v3
+        with: 
+          path: dist
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
