--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,12 +32,12 @@ jobs:
         run: npm run build
 
       - name: Setup Pages
-        uses: action/configure-pages@v5
+        uses: actions/configure-pages@v5
         with:
           destination: pages/docs
 
       - name: Build Docs
-        uses: action/jekyll-build-pages@v1
+        uses: actions/jekyll-build-pages@v1
 
       - name: Copy Over the App
         run: mv dist pages/app
