--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,7 +40,9 @@ jobs:
         uses: actions/jekyll-build-pages@v1
 
       - name: Copy Over the App
-        run: mv dist pages/app
+        run: |
+          mkdir -p pages
+          mv dist pages/app
 
       - name: Upload Static Files
         id: deployment
