--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,8 +33,8 @@ jobs:
 
       - name: Copy Over the App
         run: |
-          mkdir -p pages
-          mv dist pages/app
+          mkdir -p outputdir
+          mv dist outputdir/app
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
@@ -42,19 +42,19 @@ jobs:
       - name: Build Docs
         uses: actions/jekyll-build-pages@v1
         with:
-          destination: pages/docs
+          destination: outputdir/docs
 
       - name: Upload Static Files
         id: deployment
         uses: actions/upload-pages-artifact@v3
         with: 
-          path: pages
+          path: outputdir
 
       - name: Pages Folder
         uses: actions/upload-artifact@v4
         with:
           name: pages-files
-          path: pages
+          path: outputdir
   deploy:
     environment:
       name: github-pages
