--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "clean": "rm -rf dist"
   },
   "devDependencies": {
+    "cypress": "^14.0.0",
     "gh-pages": "^6.2.0",
     "vite": "^5.4.3"
   },
   "dependencies": {
+    "@vitejs/plugin-vue": "^5.2.1",
     "axios": "^1.7.7",
-    "ol": "latest"
+    "ol": "^10.3.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   }
 }
