--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "serve": "vite preview",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "e2e": "cypress open"
   },
   "devDependencies": {
-    "cypress": "^14.0.0",
+    "cypress": "^14.0.1",
     "gh-pages": "^6.2.0",
     "vite": "^5.4.3"
   },
