--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "deploy": "gh-pages -d dist",
     "clean": "rm -rf dist",
     "e2e": "cypress open",
-    "test" : "npx cypress run"
+    "test": "npx cypress run"
   },
   "devDependencies": {
     "cypress": "^14.0.1",
+    "cypress-vite": "^1.6.0",
     "gh-pages": "^6.2.0",
     "vite": "^5.4.3"
   },
